// Copyright AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package pubsub.proto.v1;

service PubSubService {
  rpc OpenChannel(stream Message) returns (stream Message) {}
}

message Subscribe { AGPHeader header = 1; }

message Unsubscribe { AGPHeader header = 1; }

message Publish {
  AGPHeader header = 1;
  SessionHeader control = 2;
  uint32 fanout = 3;
  Content msg = 4;
}

// recvFrom = connection from where the sub/unsub is supposed to be received
// forwardTo = connection where to forward the message
// incomingConn = connection from where the packet was received
// error = if true the publication contains an error notification
message AGPHeader {
  Agent source = 1;
  Agent destination = 2;
  optional uint64 recvFrom = 3;
  optional uint64 forwardTo = 4;
  optional uint64 incomingConn = 5;
  optional bool error = 6;
}

message Agent {
  uint64 organization = 1;
  uint64 namespace = 2;
  uint64 agent_type = 3;
  optional uint64 agent_id = 4;
}

enum SessionHeaderType {
  FNF = 0;
  REQUEST = 1;
  REPLY = 2;
  STREAM = 3;
  RTX_REQUEST = 4;
  RTX_REPLY = 5;
  UNSPECIFIED = 6;
}
// Session.session_id is the ID of the session

// Session.message_id meaning according to the SessionHeaderType
// FNF = nonce
// REQUEST = nonce
// REPLY = nonce of the associated REQUEST
// STREAM = sequential incremental ID
// RTX_REQUEST = nonce
// RTX_REPLY = nonce of the associated RTX_REQUEST

// Session.stream meaning according to the SessionHeaderType
// STREAM = stream for which the id field is valid
// RTX_REQUEST = stream for this RTX_REQUEST
// RTX_REPLY = same as the on in the associated RTX_REQUEST
// None in all the other cases

// Session.rtx meaning according to SessionHeaderType
// RTX_REQUEST = id of the missing packet to retransmit
// RTX_REPLY = id of the retransmitted packet
// None in all the other cases

message SessionHeader {
  SessionHeaderType header_type = 1;
  uint32 session_id = 2;
  uint32 message_id = 3;
  optional uint32 stream = 4;
  optional uint32 rtx = 5;
}

message Content {
  string content_type = 1;
  bytes blob = 2;
}

message Message {
  oneof messageType {
    Subscribe subscribe = 1;
    Unsubscribe unsubscribe = 2;
    Publish publish = 3;
  }
  map<string, string> metadata = 4;
}
